feat: 自动crud 功能完成
